force-app/main/default/objects/ReadingLog__c/ReadingLog__c.object-meta.xml
<CustomObject>
    <description>読了記録。所有者以外には見えない。</description>
    <label>読書記録</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>記録番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>読書記録</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>