force-app/main/default/objects/ReadingLog__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>書誌マスタへの参照。</description>
    <label>本</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>読書記録</relationshipLabel>
    <relationshipName>Reading_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>