force-app/main/default/objects/ReadingLog__c/fields/DisplayName__c.field-meta.xml
<CustomField>
    <fullName>DisplayName__c</fullName>
    <formula>Book__r.Title__c &amp; &quot; (&quot; &amp; TEXT(ReadDate__c) &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>表示名</label>
    <type>Text</type>
</CustomField>