force-app/main/default/objects/ReadingLog__c/fields/ReadDate__c.field-meta.xml
<CustomField>
    <fullName>ReadDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>読了日。デフォルトは今日。</description>
    <label>読了日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>