force-app/main/default/objects/ReadingLog__c/listViews/My_Reading_Logs.listView-meta.xml
<ListView>
    <fullName>My_Reading_Logs</fullName>
    <columns>NAME</columns>
    <columns>DisplayName__c</columns>
    <columns>Book__c</columns>
    <columns>ReadDate__c</columns>
    <filterScope>Mine</filterScope>
    <label>自分の読書記録</label>
</ListView>